--- a/app/src/main/res/layout/bottom_dialog.xml
+++ b/app/src/main/res/layout/bottom_dialog.xml
@@ -16,16 +16,16 @@
         android:layout_margin="10dp"/>
 
     <TextView
+        android:id="@+id/food_name"
+        style="@style/TextAppearance.AppCompat.Medium"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/food_name"
-        android:text="Pizza"
-        style="@style/TextAppearance.AppCompat.Medium"
-        app:layout_constraintStart_toEndOf="@id/food_img"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="10dp"
         android:layout_marginLeft="10dp"
-        android:textColor="#000000"/>
+        android:layout_marginTop="10dp"
+        android:text="Pizza"
+        android:textColor="#000000"
+        app:layout_constraintStart_toEndOf="@id/food_img"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:layout_width="wrap_content"
