--- a/app/src/main/res/layout/bottom_dialog.xml
+++ b/app/src/main/res/layout/bottom_dialog.xml
@@ -22,20 +22,18 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
-        android:text="Pizza"
         android:textColor="#000000"
         app:layout_constraintStart_toEndOf="@id/food_img"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
+        android:id="@+id/food_qty"
+        style="@style/TextAppearance.AppCompat.Small"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/food_qty"
-        android:text="x3"
-        style="@style/TextAppearance.AppCompat.Small"
-        app:layout_constraintTop_toBottomOf="@id/food_name"
+        android:layout_marginLeft="10dp"
         app:layout_constraintStart_toEndOf="@id/food_img"
-        android:layout_marginLeft="10dp"/>
+        app:layout_constraintTop_toBottomOf="@id/food_name" />
 
     <TextView
         android:id="@+id/food_price"
@@ -43,7 +41,6 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="104dp"
         android:background="#ccffffff"
-        android:text=" 48 lei"
         android:textColor="#004b35"
         app:layout_constraintBottom_toBottomOf="@id/food_img"
         app:layout_constraintStart_toStartOf="parent" />
