--- a/app/src/main/res/layout/menu_layout_item.xml
+++ b/app/src/main/res/layout/menu_layout_item.xml
@@ -1,12 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/menulayout"
-    android:layout_width="362dp"
-    android:layout_height="88dp">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_margin="5dp"
+    app:cardBackgroundColor="@color/white"
+    app:cardCornerRadius="8dp"
+    app:cardElevation="8dp"
+    app:cardMaxElevation="10dp"
+    app:cardPreventCornerOverlap="true"
+    app:cardUseCompatPadding="true">
 
-    <RelativeLayout
+
+<RelativeLayout
         android:layout_width="362dp"
         android:layout_height="88dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -36,5 +43,13 @@
             android:layout_height="30dp"
             android:layout_marginTop="50dp"
             android:text="TextView" />
-    </RelativeLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="39dp"
+        android:layout_height="41dp"
+        android:layout_marginLeft="300dp"
+        android:layout_marginTop="50dp"
+        app:srcCompat="@drawable/download" />
+</RelativeLayout>
+</androidx.cardview.widget.CardView>
