--- a/app/src/main/res/layout/activity_restaurant_menu.xml
+++ b/app/src/main/res/layout/activity_restaurant_menu.xml
@@ -11,14 +11,14 @@
 
     <ImageButton
         android:id="@+id/btn_drinks"
-        android:layout_width="146dp"
-        android:layout_height="129dp"
+        android:layout_width="109dp"
+        android:layout_height="101dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="31dp"
-        android:layout_marginLeft="31dp"
-        android:layout_marginTop="67dp"
+        android:layout_marginStart="29dp"
+        android:layout_marginLeft="29dp"
+        android:layout_marginTop="156dp"
         android:background="@drawable/drink"
         android:contentDescription="@string/todo"
         android:elevation="21dp" />
@@ -26,13 +26,14 @@
     <ImageButton
         android:id="@+id/btn_snack"
         style="@style/Widget.AppCompat.ImageButton"
-        android:layout_width="138dp"
-        android:layout_height="134dp"
+        android:layout_width="125dp"
+        android:layout_height="118dp"
         android:layout_alignTop="@+id/btn_drinks"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_marginEnd="11dp"
-        android:layout_marginRight="11dp"
+        android:layout_marginTop="-14dp"
+        android:layout_marginEnd="21dp"
+        android:layout_marginRight="21dp"
         android:adjustViewBounds="true"
         android:background="@drawable/appetizer"
         android:cropToPadding="true"
@@ -43,6 +44,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/btn_snack"
+        android:layout_marginEnd="30dp"
+        android:layout_marginRight="30dp"
+        android:layout_marginBottom="12dp"
         android:layout_toStartOf="@+id/btn_local_food"
         android:layout_toLeftOf="@+id/btn_local_food"
         android:text="@string/drinks"
@@ -55,6 +59,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/btn_snack"
+        android:layout_marginStart="5dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginBottom="12dp"
         android:layout_toEndOf="@+id/btn_local_food"
         android:layout_toRightOf="@+id/btn_local_food"
         android:text="@string/appetizers"
@@ -76,11 +83,11 @@
 
     <ImageButton
         android:id="@+id/btn_local_food"
-        android:layout_width="181dp"
-        android:layout_height="148dp"
+        android:layout_width="138dp"
+        android:layout_height="118dp"
         android:layout_below="@+id/textView8"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="9dp"
+        android:layout_marginTop="15dp"
         android:background="@drawable/food"
         android:elevation="24dp"
         android:scaleType="centerCrop" />
@@ -91,7 +98,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/btn_local_food"
         android:layout_marginLeft="25dp"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="-1dp"
         android:text="@string/wine"
         android:textColor="@color/cardview_dark_background"
         android:textSize="18sp"
@@ -99,10 +106,10 @@
 
     <ImageButton
         android:id="@+id/btn_wine"
-        android:layout_width="153dp"
-        android:layout_height="155dp"
+        android:layout_width="112dp"
+        android:layout_height="138dp"
         android:layout_below="@+id/btn_local_food"
-        android:layout_marginTop="62dp"
+        android:layout_marginTop="20dp"
         android:background="#00FFFFFF"
         android:scaleType="centerCrop"
         app:srcCompat="@drawable/wine__1_" />
@@ -113,7 +120,7 @@
         android:layout_height="44dp"
         android:layout_below="@+id/btn_local_food"
         android:layout_marginLeft="300dp"
-        android:layout_marginTop="26dp"
+        android:layout_marginTop="-10dp"
         android:text="@string/dessert"
         android:textColor="@color/cardview_dark_background"
         android:textSize="18sp"
@@ -122,16 +129,27 @@
     <ImageButton
         android:id="@+id/imageButtonDessert"
         style="@android:style/Widget.DeviceDefault.Light.ImageButton"
-        android:layout_width="wrap_content"
-        android:layout_height="170dp"
+        android:layout_width="117dp"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/btn_local_food"
         android:layout_marginLeft="270dp"
-        android:layout_marginTop="52dp"
+        android:layout_marginTop="20dp"
         android:adjustViewBounds="true"
         android:backgroundTint="#00FFFFFF"
         android:cropToPadding="false"
         android:scaleType="centerCrop"
         app:srcCompat="@drawable/dessert" />
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/et_tabnum"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/table_number" />
+    </com.google.android.material.textfield.TextInputLayout>
 
 
 </RelativeLayout>
