--- a/app/src/main/res/layout/activity_wine_menu.xml
+++ b/app/src/main/res/layout/activity_wine_menu.xml
@@ -10,11 +10,35 @@
     app:layout_constraintTop_toTopOf="parent"
     tools:context="Menu.WineMenuActivity">
 
+ <Button
+     android:id="@+id/btn_add_to_cart_wine"
+     android:layout_width="wrap_content"
+     android:layout_height="wrap_content"
+     android:layout_marginStart="158dp"
+     android:layout_marginTop="13dp"
+     android:layout_marginEnd="119dp"
+     android:text="@string/add_to_cart"
+     app:layout_constraintEnd_toEndOf="parent"
+     app:layout_constraintStart_toStartOf="parent"
+     app:layout_constraintTop_toBottomOf="@+id/recyclerviewWine" />
+
  <androidx.recyclerview.widget.RecyclerView
-     android:id="@+id/recyclerview"
+     android:id="@+id/recyclerviewWine"
      android:layout_width="409dp"
-     android:layout_height="729dp"
+     android:layout_height="514dp"
+     android:layout_marginTop="60dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />
+
+ <ImageButton
+     android:id="@+id/imageButton"
+     android:layout_width="wrap_content"
+     android:layout_height="wrap_content"
+     android:layout_marginStart="7dp"
+     android:layout_marginEnd="357dp"
+     app:layout_constraintEnd_toEndOf="parent"
+     app:layout_constraintStart_toStartOf="parent"
+     app:layout_constraintTop_toTopOf="parent"
+     app:srcCompat="?attr/actionModePasteDrawable" />
 </androidx.constraintlayout.widget.ConstraintLayout>
