--- a/app/src/main/res/layout/item_bill.xml
+++ b/app/src/main/res/layout/item_bill.xml
@@ -13,5 +13,5 @@
         android:layout_width="106dp"
         android:layout_height="32dp"
         android:layout_marginLeft="10dp"
-        android:text="HomeTown" />
+        android:text="Price" />
 </LinearLayout>
