--- a/app/src/main/res/layout/activity_table.xml
+++ b/app/src/main/res/layout/activity_table.xml
@@ -8,12 +8,24 @@
 
     <ListView
         android:id="@+id/lv_table"
-        android:layout_width="409dp"
-        android:layout_height="729dp"
+        android:layout_width="351dp"
+        android:layout_height="516dp"
         android:layout_marginStart="1dp"
         android:layout_marginTop="1dp"
         android:layout_marginEnd="1dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/btn_order_delivered"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="116dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="149dp"
+        android:text="Button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/lv_table" />
 </androidx.constraintlayout.widget.ConstraintLayout>
