--- a/app/src/main/res/layout/activity_staff_tables.xml
+++ b/app/src/main/res/layout/activity_staff_tables.xml
@@ -23,16 +23,41 @@
 
     <Button
         android:id="@+id/button_menu_item"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="153dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="117dp"
+        android:layout_width="126dp"
+        android:layout_height="55dp"
+        android:layout_marginStart="200dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="60dp"
         android:text="@string/update_menu"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/idGVTables" />
+
+    <Button
+        android:id="@+id/btn_log_out"
+        android:layout_width="118dp"
+        android:layout_height="55dp"
+        android:layout_marginStart="34dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="48dp"
+        android:text="Log out"
+        app:layout_constraintEnd_toStartOf="@+id/button_menu_item"
+        app:layout_constraintHorizontal_bias="0.368"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/idGVTables" />
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Button"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.507"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/idGVTables"
+        app:layout_constraintVertical_bias="0.556" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
