--- a/app/src/main/res/layout/activity_table.xml
+++ b/app/src/main/res/layout/activity_table.xml
@@ -24,7 +24,8 @@
         android:layout_marginStart="116dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="149dp"
-        android:text="Button"
+        android:text="@string/deliver_order"
+        android:textColor="#000000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/lv_table" />
