--- a/app/src/main/res/layout/item_bill.xml
+++ b/app/src/main/res/layout/item_bill.xml
@@ -9,7 +9,7 @@
         android:text="Name" />
 
     <TextView
-        android:id="@+id/tvHome"
+        android:id="@+id/tvPrice"
         android:layout_width="106dp"
         android:layout_height="32dp"
         android:layout_marginLeft="10dp"
