--- a/app/src/main/res/layout/activity_dessert_menu.xml
+++ b/app/src/main/res/layout/activity_dessert_menu.xml
@@ -15,17 +15,18 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="158dp"
-        android:layout_marginTop="13dp"
+        android:layout_marginTop="4dp"
         android:layout_marginEnd="119dp"
         android:text="@string/add_to_cart"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/recyclerviewDesserts" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerviewDesserts"
-        android:layout_width="348dp"
-        android:layout_height="421dp"
+        android:layout_width="423dp"
+        android:layout_height="472dp"
         android:layout_marginTop="60dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
