--- a/app/src/main/res/layout/activity_staff_tables.xml
+++ b/app/src/main/res/layout/activity_staff_tables.xml
@@ -12,12 +12,13 @@
         android:id="@+id/idGVTables"
         android:layout_width="390dp"
         android:layout_height="516dp"
+        android:layout_marginTop="4dp"
         android:backgroundTint="#ECE8E8"
         android:horizontalSpacing="6dp"
         android:numColumns="2"
         android:verticalSpacing="6dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.428"
+        app:layout_constraintHorizontal_bias="0.41"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -25,12 +26,11 @@
         android:id="@+id/button_menu_item"
         android:layout_width="126dp"
         android:layout_height="55dp"
-        android:layout_marginStart="200dp"
         android:layout_marginTop="20dp"
-        android:layout_marginEnd="60dp"
+        android:layout_marginEnd="4dp"
         android:text="@string/update_menu"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.959"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/idGVTables" />
 
@@ -38,26 +38,25 @@
         android:id="@+id/btn_log_out"
         android:layout_width="118dp"
         android:layout_height="55dp"
-        android:layout_marginStart="34dp"
+        android:layout_marginStart="4dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="48dp"
         android:text="Log out"
         app:layout_constraintEnd_toStartOf="@+id/button_menu_item"
-        app:layout_constraintHorizontal_bias="0.368"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/idGVTables" />
 
     <Button
         android:id="@+id/button2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button"
+        android:layout_width="137dp"
+        android:layout_height="61dp"
+        android:layout_marginBottom="104dp"
+        android:text="Order History"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.507"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/idGVTables"
-        app:layout_constraintVertical_bias="0.556" />
+        app:layout_constraintHorizontal_bias="0.458"
+        app:layout_constraintStart_toStartOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
