--- a/app/src/main/res/layout/activity_wine_menu.xml
+++ b/app/src/main/res/layout/activity_wine_menu.xml
@@ -15,17 +15,18 @@
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="158dp"
-     android:layout_marginTop="13dp"
+     android:layout_marginTop="4dp"
      android:layout_marginEnd="119dp"
      android:text="@string/add_to_cart"
      app:layout_constraintEnd_toEndOf="parent"
+     app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/recyclerviewWine" />
 
  <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/recyclerviewWine"
-     android:layout_width="352dp"
-     android:layout_height="483dp"
+     android:layout_width="415dp"
+     android:layout_height="482dp"
      android:layout_marginTop="60dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
@@ -33,12 +34,14 @@
 
  <ImageButton
      android:id="@+id/imageButton"
-     android:layout_width="wrap_content"
-     android:layout_height="wrap_content"
+     android:layout_width="62dp"
+     android:layout_height="47dp"
      android:layout_marginStart="7dp"
 
+     android:layout_marginTop="16dp"
      android:layout_marginEnd="300dp"
      app:layout_constraintEnd_toEndOf="parent"
+     app:layout_constraintHorizontal_bias="0.191"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="?attr/actionModePasteDrawable" />
