--- a/app/src/main/res/layout/menu_layout_item.xml
+++ b/app/src/main/res/layout/menu_layout_item.xml
@@ -13,9 +13,9 @@
     app:cardUseCompatPadding="true">
 
 
-<RelativeLayout
-        android:layout_width="362dp"
-        android:layout_height="88dp"
+    <RelativeLayout
+        android:layout_width="406dp"
+        android:layout_height="112dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -24,32 +24,48 @@
 
         <TextView
             android:id="@+id/txtName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:text="TextView" />
+            android:layout_width="197dp"
+            android:layout_height="52dp"
+            android:layout_marginLeft="0dp"
+            android:text="TextView"
+            android:textColor="#000000"
+            android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="78dp"
+            android:layout_height="31dp"
+            android:layout_marginLeft="310dp"
+
+            android:text="lei"
+            android:textColor="#100101"
+            android:textSize="14sp" />
+
+        <TextView
+            android:id="@+id/txtDescription"
+            android:layout_width="match_parent"
+            android:layout_height="54dp"
+            android:layout_marginTop="50dp"
+            android:fontFamily="sans-serif"
+            android:text="TextView"
+            android:textColor="#000000"
+            android:textSize="16sp" />
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="39dp"
+            android:layout_height="41dp"
+            android:layout_marginLeft="300dp"
+            android:layout_marginTop="20dp"
+            app:srcCompat="@drawable/download" />
 
         <TextView
             android:id="@+id/txtPrice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="300dp"
-
-            android:text="TextView" />
-
-        <TextView
-            android:id="@+id/txtDescription"
-            android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:layout_marginTop="50dp"
-            android:text="TextView" />
-
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="39dp"
-        android:layout_height="41dp"
-        android:layout_marginLeft="300dp"
-        android:layout_marginTop="50dp"
-        app:srcCompat="@drawable/download" />
-</RelativeLayout>
+            android:layout_marginLeft="220dp"
+            android:text="TextView"
+            android:textColor="#000000"
+            android:textSize="20sp" />
+    </RelativeLayout>
 </androidx.cardview.widget.CardView>
